# mad

./: .gitignore  README.md  cluster.py  create_anti_grid.py  create_grid.py  create_raster.py  download_all.py  experiment.py  experiment_wrapper.sh  extract_most_important.sh  gee_interface.py  geemap.ipynb  journal.md  label_images.py  lasso_on_tif.py  lasso_on_tif0613.py  lasso_on_tifs.py  lasso_predict.py  lasso_train.py  playground.ipynb  process_tif.sh  pyproject.toml  read_ecoregions.py  regression.ipynb  test.sh  ti_read.ipynb  tif_utils.py
experiments/: experiment.py
helpers/: test.sh  train_for_biome.sh
journal/: journal.md
legacy/: create_grid.py  create_variants.py  download_all.py
package/: __init__.py  cli.py  create_database.py  create_dataset.py  create_grid.py  create_variants.py  database_create.py  database_download.py  database_index.py  download_all.py  download_database.py  index_database.py  label_images.py  lasso_predict.py  lasso_train.py  s3_bands_download.sh  s3_bands_to_image.sh  s3_get_metadata.sh  s3_image_download_first.sh  s3_image_download_layered.sh  setup.py  tif_utils.py  yolo_predict.py  yolo_train.py
scripts/: australia_intersect.py  cluster_tif.py  create_heatmap.py  create_loss_tables.py  create_structure.sh  experiment.py  experiment_wrapper.sh  geolocate_labels.py  grid_mgrs.py  kenya_intersect.py  process_tif.sh  s3_clean.sh  s3_createsplit.sh  s3_download_all.sh  s3_download_all_metadata.sh  s3_download_all_tci.sh  s3_download_image.sh  s3_download_scl.sh  s3_download_tci.sh  s3_gather.sh  s3_gather_all.sh  s3_to_tif.sh  (+12 more)
