[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "your-package"
version = "0.1.0"
dependencies = [
  "earthengine_api>=1.6.0",
  "geopandas>=1.1.1",
  "joblib>=1.5.1",
  "matplotlib>=3.10.3",
  "numpy>=2.3.1",
  "pandas>=2.3.1",
  "rasterio>=1.4.3",
  "Requests>=2.32.4",
  "scikit_learn>=1.7.1",
  "scipy>=1.16.0",
  "seaborn>=0.13.2",
  "Shapely>=2.1.1",
  "tqdm>=4.67.1",
]

[project.scripts]
mad = "package.cli:main"

[tool.setuptools]
packages = ["package"]
